--- a/TMDBClient.xcodeproj/xcshareddata/xcschemes/TMDB Client.xcscheme
+++ b/TMDBClient.xcodeproj/xcshareddata/xcschemes/TMDB Client.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6B6B6E492CDD4B3F00957AE4"
+               BuildableName = "TMDB Client_Tests.xctest"
+               BlueprintName = "TMDB Client_Tests"
+               ReferencedContainer = "container:TMDBClient.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
